--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/massirohuyu/tokimeki-doctann",
   "devDependencies": {
+    "connect": "^2.15.0",
     "grunt": "^0.4.4",
-    "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1"
